@@ -1,3 +1,11 @@
+2012-04-12  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	Backport from mainline
+	2012-04-12  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	PR target/52775
+	* gcc.target/powerpc/pr52775.c: New file.
+
 2012-04-12  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/52943
